--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: left;
     padding: 15px;
+    margin-left: 80px;
 }
 
 .store-item-img {
@@ -33,4 +34,14 @@ margin-left: 80px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  margin-left: 250px;
+}
+.store-item-img-round {
+  width: 280px;
+  height: 280px;
+  padding: 10px;
+  border-radius: 70%;
+}
+.containerr{
+  margin: 40px;
 }
