--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -12,3 +12,8 @@
     display: flex;
     justify-content: space-around;
 }
+
+.button-foot{
+    font-size: medium;
+    background-color: rgb(14, 250, 250);
+}
