--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -35,6 +35,7 @@ margin-left: 80px;
   flex-direction: column;
   align-items: flex-end;
   margin-left: 250px;
+  margin-top: 50px;
 }
 .store-item-img-round {
   width: 280px;
@@ -43,5 +44,5 @@ margin-left: 80px;
   border-radius: 70%;
 }
 .containerr{
-  margin: 40px;
+  margin-left: 80px;
 }
